Change lenght calcule

--- a/game.html
+++ b/game.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="choices">
-                <div class="choice" onclick="playerChoic('Paper')"><i class="fa-solid fa-hand"></i></div>
+                <div class="choice" onclick="playerChoic('PapeSSr')"><i class="fa-solid fa-hand"></i></div>
                 <div class="choice" onclick="playerChoic('Rock')"><i class="fa-solid fa-hand-fist"></i></div>
                 <div class="choice" onclick="playerChoic('Scissors')"><i class="fa-solid fa-hand-scissors"></i></div>
             </div>
